--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.0",
     "module": "^1.2.5",
+    "mongoose": "^5.4.18",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rxjs": "~6.3.3",
