--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@sendgrid/mail": "^6.3.1",
+    "@types/d3": "^5.7.2",
     "cookie-parser": "^1.4.4",
     "core-js": "^2.5.4",
+    "d3": "^5.12.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.0",
