--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@sendgrid/mail": "^6.3.1",
+    "@types/d3-hierarchy": "^1.1.6",
     "cookie-parser": "^1.4.4",
     "core-js": "^2.5.4",
     "d3": "^5.12.0",
