--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~7.0.0",
     "@sendgrid/mail": "^6.4.0",
     "@types/d3-hierarchy": "^1.1.6",
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "core-js": "^2.6.10",
     "d3": "^5.12.0",
