--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash.template": "^4.5.0",
     "module": "^1.2.5",
     "mongoose": "^5.7.7",
     "passport": "^0.4.0",
