--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@primer/octicons": "^9.3.0",
     "@sendgrid/mail": "^6.4.0",
     "@types/d3-hierarchy": "^1.1.6",
     "body-parser": "^1.19.0",
@@ -33,6 +34,7 @@
     "lodash.template": "^4.5.0",
     "module": "^1.2.5",
     "mongoose": "^5.7.7",
+    "octicons": "^8.5.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rxjs": "~6.3.3",
