--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/@primer/octicons/build/build.css"
+              "node_modules/@primer/octicons/build/build.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
