--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@primer/octicons": "^9.3.0",
     "@sendgrid/mail": "^6.4.0",
     "@types/d3-hierarchy": "^1.1.6",
@@ -30,6 +33,7 @@
     "d3": "^5.12.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash.template": "^4.5.0",
     "module": "^1.2.5",
