--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cookie-parser": "^1.4.4",
     "core-js": "^2.6.10",
     "d3": "^5.12.0",
+    "d3plus-text": "^0.9.50",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "font-awesome": "^4.7.0",
