--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport-local": "^1.0.0",
     "rxjs": "~6.3.3",
     "sendgrid": "^4.2.0",
+    "serialize-javascript": "^2.1.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
