--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cookie-parser": "^1.4.4",
     "core-js": "^2.6.10",
     "d3": "^5.12.0",
+    "d3-hierarchy": "^1.1.9",
     "d3plus-text": "^0.9.50",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
