reinstalling npm packages

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular-devkit/build-angular": "^0.1000.1",
     "@angular/animations": "~8.2.14",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
@@ -51,7 +51,7 @@
   },
   "devDependencies": {
     "@angular/cli": "~8.3.23",
-    "@angular/compiler-cli": "^8.2.14",
+    "@angular/compiler-cli": "^10.0.2",
     "@angular/language-service": "~8.2.14",
     "@types/d3": "^5.7.2",
     "@types/jasmine": "~2.8.8",
@@ -60,12 +60,12 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "^6.0.0",
     "typescript": "~3.5.3"
