--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.1000.1",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/animations": "~8.2.14",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
@@ -34,6 +34,7 @@
     "d3": "^5.12.0",
     "d3-hierarchy": "^1.1.9",
     "d3plus-text": "^0.9.50",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "font-awesome": "^4.7.0",
