--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
               "node_modules/@primer/octicons/build/build.css",
               "node_modules/font-awesome/css/font-awesome.css"
             ],
-            "scripts": [
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -134,5 +133,8 @@
       }
     }
   },
-  "defaultProject": "client"
+  "defaultProject": "client",
+  "cli": {
+    "analytics": "daa810b9-59a5-4c77-9df4-911a4190c1f1"
+  }
 }
