--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build --prod --output-path dist",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --prod --output-path dist"
   },
   "private": true,
   "dependencies": {
@@ -69,6 +70,6 @@
     "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "^6.0.0",
-    "typescript": "^3.9.2"
+    "typescript": "~3.8.3"
   }
 }
