--- a/package.json
+++ b/package.json
@@ -70,6 +70,6 @@
     "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "^6.0.0",
-    "typescript": "~3.8.3"
+    "typescript": "^3.9.2"
   }
 }
