adding bootstrap, jquery and popper as npm packages instead of inline scripts/links

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@sendgrid/mail": "^6.4.0",
     "@types/d3-hierarchy": "^1.1.6",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
     "core-js": "^2.6.10",
     "d3": "^5.12.0",
     "d3-hierarchy": "^1.1.9",
@@ -36,12 +37,14 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "module": "^1.2.5",
     "mongoose": "^5.7.7",
     "octicons": "^8.5.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "sendgrid": "^4.2.0",
     "serialize-javascript": "^2.1.2",
