--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
+    "start:dev": "nodemon server.js",
     "build": "ng build --prod --output-path dist",
     "test": "ng test",
     "lint": "ng lint",
@@ -29,9 +30,11 @@
     "@types/d3-hierarchy": "^1.1.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
+    "chalk": "^4.1.0",
     "core-js": "^2.6.10",
     "d3": "^5.12.0",
     "d3-hierarchy": "^1.1.9",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
@@ -40,6 +43,7 @@
     "jsonwebtoken": "^8.5.1",
     "module": "^1.2.5",
     "mongoose": "^5.7.7",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "popper.js": "^1.16.1",
@@ -69,5 +73,17 @@
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
     "typescript": "^3.9.2"
+  },
+  "nodemonConfig": {
+    "restartable": "rs",
+    "ignore": [
+      "node_modules/**/node_modules"
+    ],
+    "delay": "1000",
+    "env": {
+      "NODE_ENV": "development",
+      "PORT": 4000,
+      "DEBUG": "server"
+    }
   }
 }
