--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.ico", "src/assets", "src/robots.txt"],
             "styles": [
               "src/styles.scss",
               "node_modules/font-awesome/css/font-awesome.css"
