--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "font-awesome": "^4.7.0",
+    "heroku-ssl-redirect": "^0.1.1",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "module": "^1.2.5",
