--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "node server.js",
     "start:dev": "nodemon server.js",
-    "start:client": "ng serve -o",
+    "start:client": "ng serve -o --configuration=development",
     "build": "ng build --configuration production --output-path dist",
     "test": "ng test",
     "lint": "ng lint",
