--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "16.x"
   },
   "scripts": {
-    "heroku-prebuild": "cd server && npm i && cd .. && cd client && npm i --save-dev && npm i"
+    "heroku-prebuild": "cd server && npm i && cd .. && cd client && npm i --save-dev && npm i && ng build --configuration production --output-path dist"
   },
   "private": true,
   "dependencies": {
